[package]
authors = ["g0h4n <g0h4n_0@protonmail.com>"]
name = "rec2"
description = "REC2 (Rusty External C2, VirusTotal Implant)"
keywords = ["implant", "pentest", "social", "client", "redteam"]
repository = "https://github.com/g0h4n/REC2"
homepage = "https://github.com/g0h4n/REC2"
version = "0.1.0"
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = "4.0"
log = "0.4"
env_logger = "0.10"
whoami = "1.3"

# Crypto
hex = "0.4"
rand = "0.8.5"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["std"]}
pbkdf2 = "0.11"
regex = "1.6.0"
litcrypt = "0.3"
random-string = "1.0"
md5 = "0.7"

# Modules
virustotal3 = { version = "3.0.2" }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"